[a11y] Fixing cut `AnchorNav` action button outline due the previously introduced `overflow-y: auto` (#639)
* fix cut AnchorNav action button outline due the introduced overflow auto

* Create great-timers-shave.md

* github-actions[bot] Regenerated snapshots

* remove the non required button padding added for the outline to be visible and change container padding on mobile

* github-actions[bot] Regenerated snapshots

---------

--- a/packages/react/src/AnchorNav/AnchorNav.module.css
+++ b/packages/react/src/AnchorNav/AnchorNav.module.css
@@ -81,7 +81,6 @@
   position: relative;
   z-index: 91; /* must be higher than subdomain nav bar */
   max-height: calc(100vh - var(--base-size-12) * 2);
-  overflow-y: auto;
 }
 
 .AnchorNav--with-default-background-color .AnchorNav-inner-container {
@@ -102,6 +101,7 @@
     display: none;
     padding-left: var(--base-size-16);
   }
+
   .AnchorNav--expanded .AnchorNav-link-container {
     display: flex;
     flex-direction: column;
@@ -364,6 +364,10 @@
 }
 
 @media screen and (max-width: 40rem) {
+  .AnchorNav {
+    padding: 0;
+  }
+
   .AnchorNav-action {
     display: none;
   }
@@ -376,6 +380,11 @@
     display: flex;
     width: 100%;
     margin-top: var(--base-size-8);
+  }
+
+  .AnchorNav-inner-container {
+    overflow-y: auto;
+    padding: var(--base-size-12) var(--base-size-16);
   }
 }
 
